--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "react": "^19.0.0",
     "react-aria-components": "1.7.1",
     "react-dom": "^19.0.0",
+    "tailwind-variants": "1.0.0",
     "tailwindcss": "4.0.12",
     "tailwindcss-react-aria-components": "2.0.0",
+    "use-sound": "5.0.0",
     "vite-plugin-svgr": "4.3.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "3.2.5",
     "@eslint/js": "^9.21.0",
+    "@storybook/addon-a11y": "8.6.4",
+    "@storybook/addon-designs": "8.2.1",
     "@storybook/addon-essentials": "8.6.4",
     "@storybook/addon-onboarding": "8.6.4",
     "@storybook/blocks": "8.6.4",
